[tool.poetry]
name = "aesthetics-score"
version = "0.1.0"
description = ""
authors = ["rockerBOO <rockerboo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "^1.25.2"
pillow = "^10.0.0"
platformdirs = "^3.10.0"
requests = "^2.31.0"
tqdm = "^4.66.1"
clip = {git = "https://github.com/openai/CLIP.git", rev = "a9b1bf5920416aaeaec965c25dd9e8f98c864f16"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
